// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be able to render a loading state 1`] = `
<Page
  head={Object {}}
  isLoading={true}
/>
`;

exports[`should render PageError if page not found and PageError is available 1`] = `
<PageError
  error="Test"
/>
`;

exports[`should render a Page if page is ok 1`] = `
<Page
  head={Object {}}
/>
`;

exports[`should render a another page layout if defaultLayout is used 1`] = `
<AnotherPage
  head={Object {}}
/>
`;

exports[`should render a visible error if page is not ok and no PageError
available 1`] = `
<div
  style={
    Object {
      "text-align": "center",
    }
  }
>
  <h1>
    Test
  </h1>
  <p />
</div>
`;
